[package]
name = "transfer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "3.0.0"
spl-token = { version = "9.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-logger = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]