[package]
name = "counter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "3.0.0"

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"